t016까지 해결